Fixed dropdown z-index

--- a/src/bundle/Resources/public/scss/ui/modules/universal-discovery/_tab.scss
+++ b/src/bundle/Resources/public/scss/ui/modules/universal-discovery/_tab.scss
@@ -76,7 +76,7 @@
     &__dropdown-portal {
         .ibexa-dropdown__items {
             position: fixed;
-            z-index: 250;
+            z-index: 10250;
         }
     }
 }
